9.3.0
- Fixed bug MySql.EntityFrameworkCore.dll in NuGet packages is not signed (Oracle Bug #37503859).
- Fixed some tests due to incorrect implementation (WL16033).
- Updated third party dependencies (WL16852).


9.2.0
- Added support for .NET 9 and EF Core 9 GA versions (WL16638).
- Removed support for .NET 6 and EFCore 6 (WL16654).
- Fixed bug Run inserts in batch command as one block (MySQL Bug #110553, Oracle Bug #35240186). Thanks to Sebastian Schwarzhuber for the contribution.
- Fixed failing tests due to server changes (Oracle Bug #37365939).
- Fixed bug Fix: MySQLUpdateSqlGenerator to inherit UpdateAndSelectSqlGenerator (MySQL Bug #115020, Oracle Bug #36624158). Thanks to Hikari Fujioka for the contribution.
- Fixed bug Fixed NullReferenceException (MySQL Bug #114457, Oracle Bug #36568102). Thanks to Maximilian Bienhüls for the contribution.
- Fixed bug MySql.Data.OpenTelemetry dll has a version 0.0.0.0 (Oracle Bug #37198051).
- Fixed bug Missing VersionInfo file in multiple projects (Oracle Bug #37240118).
- Fixed bug ConcurrencyFix - Added back in RowCount checking (MySQL Bug #115853, Oracle Bug #36960454). Thanks to Ryan Kelly for the contribution.


9.1.0
- Updated test suite to use constraint-based assertions (WL16397).
- Changed testsuite to use assummptions instead of Assert.Ignore (WL16402).
- Added support for .NET 9 and EFCore 9 preview versions (WL16308).
- Added OpenTelemetry.Api NuGet package reference (WL16453).
- Fixed Code coverage (WL16309).
- Added support for OpenID Connect client authentication (WL16491).
- Fixed bug 8.0.33 Removes Important Locks (MySQL Bug #111759, Oracle Bug #35937318). Thanks to Stuart Lang for the contribution.
- Fixed bug EntityFramework SQL generation of TPT pseudo discriminator column incorrect (MySQL Bug #116028, Oracle Bug #37032982). Thanks to Kristoffer Sjöberg for the contribution.